# geohmount

./: .gitignore  LICENSE  README.md  environment.yml  index.html  pyproject.toml  setup.cfg  setup.py
aerossol-marinho/: aerossol-marinho.ipynb  aerossol-marinho.py  nacl.html
aerossol-marinho/data/: chuva_nacl.csv
elementos-rios/: elem_principais.html  elem_tracos.html  elementos-rios.ipynb  elementos-rios.py  ph_cond.html  rios_medias.xlsx
focos-incendio/: fire_outbreaks.csv  plot_fire_outbreaks.py  process_campaigns.py
focos-incendio/Campanhas/: SB180801PP1.csv  SB180901PP1.csv  SB180930PP1.csv  SB181102PP1.csv  SB181203PP1.csv  SB190107PP1.csv  SB190207PP1.csv  SB190312PP1.csv  SB190414PP1.csv  SB190519PP1.csv  SB190615PP1.csv
focos-incendio/html/: frp_open-street.html  frp_stamen-toner.html  riscofogo.html  riscofogo_stamen-toner.html
functions/: set_chart_studio.py
geohmount-plotly/: geohmount-watermark.ipynb
geohmount-plotly/aerossol-marinho/: aerossol-marinho.ipynb  chuva_nacl.csv  nacl.html
geohmount-plotly/elementos-rios/: elem_principais.html  elem_tracos.html  elementos-rios.ipynb  ph_cond.html  rios.csv  rios.xlsx  rios_medias.csv
geohmount-plotly/geohmountdata/: geohmountdata.csv  geohmountdata.ipynb  geohmountdata.xlsx
geohmount-plotly/sazonalidade-chuva/: chuva2019-sazonalidade.ipynb  chuva_2019.csv  chuva_2019.html  chuva_2019.xlsx  sazonalidade.csv  sazonalidade.html  sazonalidade.xlsx
geohmount-plotly/trajs/: trajs_SB.ipynb  trajs_sb.html
resources/css/: main.css
resources/plots/: bm_scatter.html  sb_scatter.html  sm_scatter.html
resources/tables/: bm_table.html  sb_table.html  sm_table.html
sazonalidade-chuva/: chuva2019-sazonalidade.ipynb  chuva2019-sazonalidade.py  chuva_2019.html  sazonalidade.html
src/geohmount/: __init__.py  config.py  geohmount_plots.py  plot.py  process.py  watermark.py
trajs/: data_dict.txt  geohmount_plots.py  trajs_PS.ipynb  trajs_SB.ipynb  transform.py
trajs/functions/: geohmount_plots.py  set_chart_studio.py  transform.py  watermark.py
trajs/ps/: ps_analyses.ipynb  ps_analyses.py  ps_resultado.csv  (+4 more)
(+72 files in other folders)
