[tool.poetry]
name = "geohmount"
version = "0.1.0"
description = "Analysis of the distribution of air masses and exploratory correlation of chemical variables in aquatic environments of Serra dos Órgãos, Rio de Janeiro."
authors = ["Daniel Levita <71600818+danplevs@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "1.3"
matplotlib = "3.4"
seaborn = "0.11"
plotly = "5.2.1"
kaleido = "0.2"
ipykernel = "6.2"
notebook = "6.4"
python-dotenv = "0.19"
chart-studio = "1.1"
pretty-html-table = "0.9.3"
openpyxl = "3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
