[tool.poetry]
name = "geohmount"
version = "0.1.0"
description = "Analysis of the distribution of air masses and exploratory correlation of chemical variables in aquatic environments of Serra dos Órgãos, Rio de Janeiro."
authors = ["Daniel Levita <71600818+danplevs@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
pandas = "^2.1.1"
matplotlib = "^3.8.0"
seaborn = "^0.13.0"
plotly = "^5.17.0"
kaleido = "0.2.0"
python-dotenv = "^1.0.0"
pretty-html-table = "^0.9.16"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
notebook = "^7.0.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
