[metadata]
name = geohmount
version = 0.0.1
author = Daniel Levita
author_email = danielpec@outlook.com
description = Correlation and backward trajectory analysis.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/danplevs/geohmount
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
